<resources>
    <string name="app_name">Pop Pop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_btn_home_title">홈</string>
    <string name="main_btn_map_title">지도</string>
    <string name="main_btn_favorites_title">즐겨찾기</string>
    <string name="main_btn_profile_title">프로필</string>

    <!-- 로그인 -->
    <string name="login_tv_info">매일 새로운 팝업 정보를\n 한눈에 확인해요</string>
    <string name="login_tv_help">로그인에 어려움이 있나요?</string>



    <!-- 프로필 화면 -->
    <string name="profile_frag_title">마이페이지</string>
    <string name="profile_my_review_title">내가 쓴 리뷰</string>
    <string name="profile_edit_profile_bt">프로필 수정</string>


    <!-- HomeFragment -->
    <string name="home_searchbar_hint">팝업스토어를 검색하세요</string>

    <string name="home_trend_title">트렌드 팝업</string>
    <string name="home_direction_title">어디로 가시나요?</string>
    <string name="home_waiting_title">핫플레이스 웨이팅</string>
    <string name="home_upcoming_title">오픈 예정 팝업</string>


    <!-- HomeSearchFragment -->
    <string name="home_search_frag_title">팝업 검색하기</string>


    <!-- HomeNotificationFragment -->
    <string name="home_notification_frag_title">알림</string>



    <!-- EditProfileFragment -->
    <string name="edit_profile_frag_title">내 정보 수정</string>


    <!-- SettingFragment -->
    <string name="setting_frag_title">설정</string>

    <!-- UpcomingFragment -->
    <string name="upcoming_frag_title">오픈 예정팝업</string>
</resources>