<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- 검색바 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_68"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/item_52"
                        android:layout_height="@dimen/item_52"
                        android:layout_marginVertical="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_16"
                        android:src="@drawable/_home_searchbar_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_search_area"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/item_38"
                        android:layout_marginHorizontal="@dimen/margin_8"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/_home_search_bar">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginVertical="@dimen/margin_7"
                            android:layout_marginStart="@dimen/margin_10"
                            android:src="@drawable/_home_search_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/gray_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="-0.03"
                            android:lineSpacingExtra="@dimen/text_4"
                            android:layout_marginStart="@dimen/margin_10"
                            android:text="@string/home_searchbar_hint"
                            android:textColor="@color/gray_500"
                            android:textSize="@dimen/text_12"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/item_28"
                        android:layout_height="@dimen/item_28"
                        android:layout_marginVertical="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:src="@drawable/_home_searchbar_noti_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_1"
                        android:background="@color/gray_300"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_trend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/cl_search_bar">

                    <TextView
                        android:id="@+id/tv_trend_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:text="@string/home_trend_title"
                        android:textSize="@dimen/text_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_trend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:paddingHorizontal="@dimen/padding_16"
                        android:clipToPadding="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_trend_title" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_direction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_36"
                    app:layout_constraintTop_toBottomOf="@+id/cl_trend">

                    <TextView
                        android:id="@+id/tv_direction_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:text="@string/home_direction_title"
                        android:textSize="@dimen/text_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:clipToPadding="false"
                        android:paddingHorizontal="@dimen/padding_16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_direction_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_waiting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_36"
                    app:layout_constraintTop_toBottomOf="@+id/cl_direction">

                    <TextView
                        android:id="@+id/tv_waiting_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:text="@string/home_waiting_title"
                        android:textSize="@dimen/text_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_waiting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:clipToPadding="false"
                        android:paddingHorizontal="@dimen/padding_16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_waiting_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_8"
                    android:layout_marginTop="@dimen/margin_36"
                    android:background="#f0f0f0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cl_waiting" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    app:layout_constraintTop_toBottomOf="@+id/view">

                    <TextView
                        android:id="@+id/tv_upcoming_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:text="@string/home_upcoming_title"
                        android:textSize="@dimen/text_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:clipToPadding="false"
                        android:paddingHorizontal="@dimen/padding_16"
                        android:overScrollMode="never"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cl_upcoming" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/item_56"
            android:layout_height="@dimen/item_56"
            android:src="@drawable/_home_fab_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@color/primary_blue"
            app:tint="@color/white"
            app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraLarge"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_28"
            app:layout_constraintEnd_toEndOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>